--- a/Weather/Weather/WTCityMainViewController.xib
+++ b/Weather/Weather/WTCityMainViewController.xib
@@ -69,25 +69,24 @@
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<bool key="IBUIClipsSubviews">YES</bool>
-						<float key="IBUIAlpha">0.69999998807907104</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+						<bool key="IBUIAllowsSelection">NO</bool>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-						<float key="IBUIRowHeight">88</float>
+						<float key="IBUIRowHeight">44</float>
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
 					</object>
 					<object class="IBUIPageControl" id="391601992">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483356</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{138, 494}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<object class="NSAppearance" key="NSAppearance">
 							<string key="NSAppearanceName">NSAppearanceNameAqua</string>
 						</object>
-						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -887,20 +886,22 @@
 						<string key="pinchHandler:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cfBtnClicked:" id="998998265">
+						<object class="IBActionInfo" key="cfBtnClicked:" id="548059430">
 							<string key="name">cfBtnClicked:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="openSearchView:" id="337289214">
+						<object class="IBActionInfo" key="openSearchView:" id="55315318">
 							<string key="name">openSearchView:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="pinchHandler:" id="658687930">
+						<object class="IBActionInfo" key="pinchHandler:" id="506222080">
 							<string key="name">pinchHandler:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="_backgroundImage">UIImageView</string>
+						<string key="_backgroundViewOfCell">UIView</string>
 						<string key="_cityName">UILabel</string>
 						<string key="bgView">UIImageView</string>
 						<string key="cityDetailInfoScrl">UIScrollView</string>
@@ -910,31 +911,39 @@
 						<string key="footView">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="_cityName" id="521648203">
+						<object class="IBToOneOutletInfo" key="_backgroundImage" id="186394164">
+							<string key="name">_backgroundImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_backgroundViewOfCell" id="5400202">
+							<string key="name">_backgroundViewOfCell</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_cityName" id="873009983">
 							<string key="name">_cityName</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="bgView" id="401088310">
+						<object class="IBToOneOutletInfo" key="bgView" id="378826371">
 							<string key="name">bgView</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="cityDetailInfoScrl" id="15806592">
+						<object class="IBToOneOutletInfo" key="cityDetailInfoScrl" id="503234252">
 							<string key="name">cityDetailInfoScrl</string>
 							<string key="candidateClassName">UIScrollView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="cityDetailInfoScrlPageCtl" id="367443915">
+						<object class="IBToOneOutletInfo" key="cityDetailInfoScrlPageCtl" id="835984104">
 							<string key="name">cityDetailInfoScrlPageCtl</string>
 							<string key="candidateClassName">UIPageControl</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="cityMainTableView" id="222106476">
+						<object class="IBToOneOutletInfo" key="cityMainTableView" id="182206441">
 							<string key="name">cityMainTableView</string>
 							<string key="candidateClassName">UITableView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="cityMainView" id="361528314">
+						<object class="IBToOneOutletInfo" key="cityMainView" id="25697747">
 							<string key="name">cityMainView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="footView" id="819968155">
+						<object class="IBToOneOutletInfo" key="footView" id="54617909">
 							<string key="name">footView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
@@ -956,12 +965,12 @@
 						<string key="footView">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<reference key="bgView" ref="401088310"/>
-						<reference key="cityDetailInfoScrl" ref="15806592"/>
-						<reference key="cityDetailInfoScrlPageCtl" ref="367443915"/>
-						<reference key="cityMainTableView" ref="222106476"/>
-						<reference key="cityMainView" ref="361528314"/>
-						<reference key="footView" ref="819968155"/>
+						<reference key="bgView" ref="378826371"/>
+						<reference key="cityDetailInfoScrl" ref="503234252"/>
+						<reference key="cityDetailInfoScrlPageCtl" ref="835984104"/>
+						<reference key="cityMainTableView" ref="182206441"/>
+						<reference key="cityMainView" ref="25697747"/>
+						<reference key="footView" ref="54617909"/>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
@@ -976,18 +985,20 @@
 						<string key="pinchHandler:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<reference key="cfBtnClicked:" ref="998998265"/>
-						<reference key="openSearchView:" ref="337289214"/>
-						<reference key="pinchHandler:" ref="658687930"/>
+						<reference key="cfBtnClicked:" ref="548059430"/>
+						<reference key="openSearchView:" ref="55315318"/>
+						<reference key="pinchHandler:" ref="506222080"/>
 					</dictionary>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">_cityName</string>
-						<string key="NS.object.0">UILabel</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">_cityName</string>
-						<reference key="NS.object.0" ref="521648203"/>
-					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="_backgroundImage">UIImageView</string>
+						<string key="_backgroundViewOfCell">UIView</string>
+						<string key="_cityName">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<reference key="_backgroundImage" ref="186394164"/>
+						<reference key="_backgroundViewOfCell" ref="5400202"/>
+						<reference key="_cityName" ref="873009983"/>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Weather/WTCityMainViewController.m</string>
